--- a/project-manager.html
+++ b/project-manager.html
@@ -40,11 +40,19 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.jobvite.com/servicenow/job/o1lsbfwJ'>ServiceNow Careers - Technical Program Manager</a></h5> 
+<p><span class="badge badge-light">San Diego, California  San Diego</span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://jobs.jobvite.com/sitecore/job/oCWtbfwW'>Sitecore Careers - Senior Program Manager, Technology Alliances</a></h5> 
+<p><span class="badge badge-light">United States  Dallas, Texas</span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
 <h5><a href='https://mondelez.avature.net/careers/PipelineDetail/IBS-Project-Manager/17267'>IBS Project Manager - Birmingham, England, United Kingdom (UK) - 17267</a></h5> 
 <p><span class="badge badge-light">England, United Kingdom England, United Kingdom</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=o5etbfwH&__jvst=Employee+Referral&__jvsd=sUzQygwC&__jvsc=Twitter&bid=noqarMwG'>Premier Research Careers - Sr. Project Manager, Neurology</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=o5etbfwH&__jvst=Employee+Referral&__jvsd=sUzQygwC&__jvsc=Twitter&bid=noqarMwG'>Premier Research Careers - Sr. Project Manager, Neurology</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -198,7 +206,7 @@ Technical Project Manager | Arlington, VA | AbleVets
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/CavalierItInc/743999698686541-change-mgmt-project-manager'>CavalierIt Inc Change Mgmt Project Manager | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CavalierItInc/743999698686541-change-mgmt-project-manager'>CavalierIt Inc Change Mgmt Project Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Boston, MA, USA  North America</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -298,7 +306,7 @@ U.S. Remote Clinical Project Manager - In-Vitro Diagnostics in Durham, from Need
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Inmarsat/743999698666284-programme-manager-aviation'>Inmarsat Programme Manager, Aviation | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Inmarsat/743999698666284-programme-manager-aviation'>Inmarsat Programme Manager, Aviation | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -322,7 +330,7 @@ U.S. Remote Clinical Project Manager - In-Vitro Diagnostics in Durham, from Need
 <p><span class="badge badge-light">Lehi, UT</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qs49Vfwk&k=Job&j=oLoibfwm&__jvst=Employee+Referral&__jvsd=sbDU6fwy&__jvsc=Twitter&bid=npwyqMwa'>Cirrus Logic Careers - SAP Program Manager</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qs49Vfwk&k=Job&j=oLoibfwm&__jvst=Employee+Referral&__jvsd=sbDU6fwy&__jvsc=Twitter&bid=npwyqMwa'>Cirrus Logic Careers - SAP Program Manager</a></h5> 
 <p><span class="badge badge-light">Austin, Texas</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -334,7 +342,7 @@ U.S. Remote Clinical Project Manager - In-Vitro Diagnostics in Durham, from Need
 <p><span class="badge badge-light">Denver, Colorado  New York, New York  Scottsdale, Arizona</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.impactbusinessgroup.com/jb/Sr-IT-Applications-Project-Manager-Jobs-in-Michigan-Benton-Harbor/4832435'>Sr. IT Applications Project Manager Job in Grand Rapids Michigan, Benton Harbor | Other (HR, Admin, Mkt, Sales)</a></h5> 
+<h5><a href='https://jobs.impactbusinessgroup.com/jb/Sr-IT-Applications-Project-Manager-Jobs-in-Michigan-Benton-Harbor/4832435'>Sr. IT Applications Project Manager Job in Grand Rapids Michigan, Benton Harbor | Other (HR, Admin, Mkt, Sales)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -390,7 +398,7 @@ U.S. Remote Clinical Project Manager - In-Vitro Diagnostics in Durham, from Need
 <p><span class="badge badge-light">New York, New York  San Francisco New York Chicago Toronto</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/linkedin/job/owvpbfwl'>LinkedIn Careers - Global Workplace Food Program Manager</a></h5> 
+<h5><a href='https://jobs.jobvite.com/linkedin/job/owvpbfwl'>LinkedIn Careers - Global Workplace Food Program Manager</a></h5> 
 <p><span class="badge badge-light">Sunnyvale California  Sunnyvale, CA</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -398,7 +406,7 @@ U.S. Remote Clinical Project Manager - In-Vitro Diagnostics in Durham, from Need
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://croydon.referrals.selectminds.com/jobs/project-manager-grade-14-%C2%A343590-%C2%A345585-307'>Project Manager - Grade 14 ?43,590 - ?45,585 - Croydon Jobs Careers</a></h5> 
+<h5><a href='https://croydon.referrals.selectminds.com/jobs/project-manager-grade-14-%C2%A343590-%C2%A345585-307'>Project Manager - Grade 14 ?43,590 - ?45,585 - Croydon Jobs Careers</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -434,7 +442,7 @@ U.S. Remote Clinical Project Manager - In-Vitro Diagnostics in Durham, from Need
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/nortek/job/oO7sbfwi'>Nortek, Inc. Careers - Project Manager III</a></h5> 
+<h5><a href='https://jobs.jobvite.com/nortek/job/oO7sbfwi'>Nortek, Inc. Careers - Project Manager III</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -445,16 +453,6 @@ U.S. Remote Clinical Project Manager - In-Vitro Diagnostics in Durham, from Need
 <h5><a href='https://ircareers.referrals.selectminds.com/jobs/hvac-construction-project-manager-trane-38402'>HVAC / Construction Project Manager - TRANE - Ingersoll Rand Careers</a></h5> 
 <p><span class="badge badge-light">United States  United States</span></p>
 <p>Posted on: 2019-11-01</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/shiftdigital/job/oi3tbfwJ'>Shift Digital Careers - Program Manager - Lead Management</a></h5> 
-<p><span class="badge badge-light">California</span></p>
-<p>Posted on: 2019-11-01</p>
-<hr/>
-<h5><a href='https://postings.com/21758/jobs/construction-extraction/project-manager-owers-rep-fort-pierce-fl-34950/84014'>
-Project Manager/Owners Rep for Developer 55+ Communities in Fort Pierce, from Custom Executive Search, by John Barto
-</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on:: 2019-11-01</p>
 <hr/>
 
 
